[tool.poetry]
name = "machine-learning-4-graphs"
version = "0.1.0"
description = ""
authors = ["CheremyP <pongajowc@gmail.com>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
